--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </button>
 
     <!-- Profile Picture -->
-    <img src="profile.jpg" alt="Profile Picture" class="w-32 h-32 rounded-full border-4 border-white mx-auto mb-4 shadow-lg">
+    <img src="kirtikant_profile.jpg" alt="Profile Picture" class="w-32 h-32 rounded-full border-4 border-white mx-auto mb-4 shadow-lg">
 
     <h1 class="text-4xl md:text-5xl font-bold">👋 Hi, I'm Kirtikant</h1>
     <p class="mt-3 text-lg md:text-xl text-gray-300">
