--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Resume + Hire Me -->
     <div class="mt-6 flex justify-center gap-4">
-      <a href="resume.pdf" download class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-lg shadow">
+      <a href="kirtiknat_mobile_resume.pdf" download class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-lg shadow">
         📄 Download Resume
       </a>
       <a href="https://www.upwork.com/freelancers/your-profile" target="_blank"
